fix some layout bug for logo. delete green/blue from logo background lines.

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,14 @@ body, html {
     width: 100% !important;
     height: 100% !important;
 }
-
+body{
+    background: url(../img/intro-bg.jpg) bottom center;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-attachment: fixed;
+}
 h1 {
     font-weight: 700;
 }
@@ -179,26 +186,32 @@ navbar-custom .nav li a:active {
     height: 100%;
     padding: 0;
     text-align: center;
-    color: #fff;
     background: #000;
-    /*    background: url(../img/intro-bg.jpg) no-repeat bottom center;*/
-    background-color: #000;
+    background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    background-size: cover;
     -o-background-size: cover;
+
+
 }
 .intro .intro-body {
     display: table-cell;
     vertical-align: middle;
 }
-.intro .intro-body .container .row{
-    padding-top: 90px;
+.intro .intro-body .intro-logo-container{
+    position: relative;
+    height:100%;
+    width:100%;
+    flex-direction: row;
+    display: flex;
+    align-items: center;     /* Align the flex-items vertically */
+    justify-content: center;
 }
 .intro #main-logo{
-    width: 320px;
+
 }
 .intro #intro-background {
+    top: 0;
     position: absolute;
     display: table-cell;
     text-align: center;
@@ -293,14 +306,14 @@ navbar-custom .nav li a:active {
 #about {
     padding: 80px 0;
     color: #fff;
-    background: #000; /* Old browsers */
-    background: -moz-linear-gradient(top, #000 70%, #000 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #000), color-stop(100%, #000)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #000 70%, #000 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #000 70%, #000 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #000 70%, #000 100%); /* IE10+ */
-    background: linear-gradient(to bottom, #000 70%, #000 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000', endColorstr='#000', GradientType=0 ); /* IE6-9 */
+    /*background:  url(../img/about.jpg) no-repeat bottom center;*/
+    /*    background: -moz-linear-gradient(top, #000 70%, #000 100%);  FF3.6+ 
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #000), color-stop(100%, #000));  Chrome,Safari4+ 
+        background: -webkit-linear-gradient(top, #000 70%, #000 100%);  Chrome10+,Safari5.1+ 
+        background: -o-linear-gradient(top, #000 70%, #000 100%);  Opera 11.10+ 
+        background: -ms-linear-gradient(top, #000 70%, #000 100%);  IE10+ 
+        background: linear-gradient(to bottom, #000 70%, #000 100%);  W3C 
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000', endColorstr='#000', GradientType=0 );  IE6-9 */
 }
 #about .about-text {
     margin-left: 10px;
@@ -324,9 +337,7 @@ navbar-custom .nav li a:active {
     font-size: 25px;
     text-shadow: 0 0 1px #666;
 }
-#about img {
-    margin-left: 10px;
-}
+
 #about p {
     text-indent:2em;
     font-size: 18px;
@@ -336,7 +347,8 @@ navbar-custom .nav li a:active {
 #rooms {
     padding: 80px 0;
     color: #fff;
-    background: #222222;
+    background: #000;
+    //background: #222222;
 }
 #rooms p{
     text-align: left;
@@ -354,7 +366,7 @@ navbar-custom .nav li a:active {
 #faq {
     padding: 80px 0;
     color: #eeeeee;
-    background: #000; /* Old browsers */
+  //  background: #000; /* Old browsers */
 }
 #faq .panel-heading{
     color: #222222;
@@ -369,13 +381,15 @@ navbar-custom .nav li a:active {
 /* Location Section */
 #location {
     padding: 80px 0;
-    background:  #222222; /* Old browsers */
+    background: #000;
+    //background:  #222222; /* Old browsers */
 }
 
 /* Contact Section */
 #contact {
     padding: 80px 0;
-    background: #222222;
+    background: #000;
+    // background: #222222;
 }
 
 #contact .fa {
@@ -386,12 +400,11 @@ navbar-custom .nav li a:active {
 /* Career Section */
 #career {
     //background: url(../img/testimonial-bg.jpg);
-    background:#000;
-    background-size: cover;
-    background-attachment: fixed;
+  //  background:#000;
     color: #fff;
     padding: 80px 0;
 }
+
 #career {
     padding: 0;
 }
@@ -428,7 +441,7 @@ navbar-custom .nav li a:active {
 }
 /* Footer */
 nav#footer {
-    background: #222222;
+    background:#000;
     color: #ddd;
     padding: 30px 0 25px 0;
 }
